# wikjote

./: .gitignore  .pylintrc  README.md  TODO.md  conda.yml  config.json  pyproject.toml  requirements.txt
docs/: summary.md
docs/uml/: conversor.md  pipeline.md
json/: .gitattributes  eswiktionary.tar.xz
src/wikjote/: config.py  default_config.json  exceptions.py  extractor.py  extractor3.py  htmlobject.py  languagesection.py  main.py  page.py  queries.py  registry.py  section.py  wikjote.py
src/wikjote/internal/handlers/: correct_attributes.py  dump_json.py  filter.py  remove_empty.py  remove_string_raw.py  remove_subsections.py  structurize_es.py
src/wikjote/internal/processors/: defaultprocessor.py  languageprocessor.py  listprocessor.py  sensesprocessor.py  tableprocessor.py  translationsprocessor.py
src/wikjote/legacy/: extractor.py
src/wikjote/pipeline/: handler.py  pipeline.py  pipelineworker.py
src/wikjote/processors/: attributeprocessor.py  defaultprocessor.py  languageprocessor.py  listprocessor.py  procesor.py  sensesprocessor.py  tableprocessor.py  translationsprocessor.py
src/wikjote/rules/: assignationrule.py  assignator.py  namerule.py  regexrule.py  xpathrule.py
src/wikjote/sections/: additionalinfosection.py  etymologysection.py  languagesection.py  locutionssection.py  section.py  seemoresection.py  sensessection.py  translationssection.py
src/wikjote/utils/: data.py  importer.py  logformater.py  netutils.py  osutils.py  tableparser.py
uml/: structure copy.mmd  structure.md  structure.puml
